Workaround in admin tool

--- a/src/Sannsyn.Episerver.Commerce/Sannsyn/Views/SannsynAdmin/Index.cshtml
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn/Views/SannsynAdmin/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@inherits System.Web.Mvc.WebViewPage
 @*@model Sannsyn.Episerver.Commerce.Models.ViewModels.SannsynAdminViewModel*@
 @{
-    // Sannsyn.Episerver.Commerce.Models.ViewModels.SannsynAdminViewModel myModel = (Sannsyn.Episerver.Commerce.Models.ViewModels.SannsynAdminViewModel) Model;
+    Sannsyn.Episerver.Commerce.Models.ViewModels.SannsynAdminViewModel myModel = Model as Sannsyn.Episerver.Commerce.Models.ViewModels.SannsynAdminViewModel;
     Layout = "../_SannsynLayout.cshtml";
 }
 
