--- a/src/Sannsyn.Episerver.Commerce/Sannsyn/Views/SannsynAdmin/Index.cshtml
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn/Views/SannsynAdmin/Index.cshtml
@@ -6,13 +6,13 @@
 }
 
 <div>
-    <h1>Sannsyn Admin</h1>
+    <h1>Sannsyn Administration</h1>
     <section>
         <h2>Index Existing Orders</h2>
         <p>Loads existing orders into the Sannsyn service, connecting users and purchase.</p>
         <span class="dijitButton">
             <input type="button" class="dijitButtonNode" value="Index Orders"
-                   onclick="location.href='@Url.Action(" RunIndexingTool", "SannsynAdmin" )'" />
+                   onclick="location.href='@Url.Action("RunIndexingTool", "SannsynAdmin" )'" />
         </span>
     </section>
     <section>
@@ -20,7 +20,7 @@
         <p>Stops the Sannsyn service, creating a new one using the Episerver standard configuration. <b>Note!</b> Data that has not been persisted will be lost.</p>
         <span class="epi-danger dijitButton ">
             <input type="button" class="dijitButtonNode" value="Restart Service"
-                   onclick="location.href = '@Url.Action(" StopAndStartSannsynService", "SannsynAdmin")'" />
+                   onclick="location.href = '@Url.Action("StopAndStartSannsynService", "SannsynAdmin")'" />
         </span>
     </section>
     <div>
