Removed not impl. on restart service

--- a/src/Sannsyn.Episerver.Commerce/Sannsyn/Views/SannsynAdmin/Index.cshtml
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn/Views/SannsynAdmin/Index.cshtml
@@ -20,7 +20,7 @@
         <p>Stops the Sannsyn service, creating a new one using the Episerver standard configuration. <b>Note!</b> Data that has not been persisted will be lost.
         </p>
         <span class="epi-danger dijitButton ">
-            <input type="button" class="dijitButtonNode" value="Restart Service(not impl.)"
+            <input type="button" class="dijitButtonNode" value="Restart Service"
                    onclick="location.href = '@Url.Action("StopAndStartSannsynService", "SannsynAdmin")'" />
         </span>
     </section>
