--- a/src/Sannsyn.Episerver.Commerce/Sannsyn/Views/SannsynAdmin/Index.cshtml
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn/Views/SannsynAdmin/Index.cshtml
@@ -29,7 +29,15 @@
         <p></p>
         <span class="dijitButton">
             <input type="button" class="dijitButtonNode" value="Index Products"
-                   onclick="location.href='@Url.Action("IndexProductsWithCategories", "SannsynAdmin" )'" />
+                   onclick="location.href = '@Url.Action("IndexProductsWithCategories", "SannsynAdmin")'" />
+        </span>
+    </section>
+    <section>
+        <h2>Update products in Find with score from Sannsyn</h2>
+        <p></p>
+        <span class="dijitButton">
+            <input type="button" class="dijitButtonNode" value="Update Score"
+                   onclick="location.href='@Url.Action("UpdateProductsWithScore", "SannsynAdmin" )'" />
         </span>
     </section>
     <div>
